Modify .env.example for resource optimization
Updated environment variables for performance and resource management.

--- a/n8n/.env.example
+++ b/n8n/.env.example
@@ -8,6 +8,7 @@ N8N_PORT=5678
 DOMAIN_NAME=example.com             #<= change to your domain
 WEBHOOK_URL=https://example.com/    #<= change to your domain
 N8N_TRUST_PROXY=true
+N8N_PROXY_HOPS=2                        # Trust the last 2 proxies (Cloudflare -> Nginx)
 
 # === Locale ===
 GENERIC_TIMEZONE=UTC                    #<= change to your timezone (e.g. Europe/Moscow)
@@ -27,9 +28,12 @@ NODES_EXCLUDE=[]                                                        #
 NODE_FUNCTION_ALLOW_BUILTIN=crypto                                      # Allow built-in crypto module
 
 # === Performance ===  
-EXECUTIONS_TIMEOUT=3600
-N8N_RUNNERS_ENABLED=false  # Disabled to save RAM
-NODE_OPTIONS=--max-old-space-size=256  # Memory Limit
+EXECUTIONS_TIMEOUT=1800                 # Reduce timeout to free resources
+N8N_RUNNERS_ENABLED=false               # Disabled to save RAM
+NODE_OPTIONS=--max-old-space-size=768   # Memory Limit (75% of 1GB RAM)
+N8N_DEFAULT_BINARY_DATA_MODE=filesystem # Save binary data to disk instead of RAM (Critical for low RAM)
+N8N_BINARY_DATA_TTL=60                  # Delete temp binary files after 60 minutes
+N8N_WORKFLOW_EXECUTION_MAX_CONCURRENCY=5 # Limit parallel executions to prevent OOM
 
 # === Disable diagnostics ===
 N8N_DIAGNOSTICS_ENABLED=false
